--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dubbotbase",
   "description": "",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "bugs": "https://github.com/chrishayesmu/DubBotBase/issues",
   "license": "MIT",
   "author": "Chris Hayes",
@@ -11,6 +11,6 @@
     "url": "http://github.com/chrishayesmu/DubBotBase"
   },
   "dependencies": {
-    "dubapi": "1.6.5"
+    "dubapi": "^1.6.8"
   }
 }
